--- a/public/test.html
+++ b/public/test.html
@@ -1,13 +1,10 @@
 <html lang="en">
   <head>
-    <meta name="google-signin-scope" content="profile email">
-<meta name="google-signin-client_id" content="533524339613-mm3v70onq310vr0qep2it2pj5vcj1t33.apps.googleusercontent.com"></meta>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    
   </head>
   <body>
-    <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
-    <a href="#" onclick="signOut();">Sign out</a>
-    <script>
+    
+    <!--<script>
       function onSignIn(googleUser) {
         // Useful data for your client-side scripts:
         var profile = googleUser.getBasicProfile();
@@ -28,6 +25,6 @@
           console.log('User signed out.');
         });
       }
-    </script>
+    </script>-->
   </body>
 </html>
