--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,8 @@
             <div class="body-info">
                 <h4 id="welcome"></h4>
                 <!--Begin new activity-->
-                <a class="button app-button" href="#">Begin New Activity</a>
+                <!--<a class="button app-button" href="#">Begin New Activity</a>-->
+                <button class="button-hover-default button"><span>Begin new activity</span><i class="fa fa-hourglass-start"></i></button>
                 <br>
                 <!--Pule Button-->
                 <button id="pulse-button" class="button button-rounded-hover"><img src="assets/images/radio2.png"></button>
