--- a/public/profile.html
+++ b/public/profile.html
@@ -139,9 +139,10 @@
                 </div>
                 <!--Add Contact Button-->
                 <br>
-                <a id="add-contact-button" type="button" class="button radius">
+                <!--<a id="add-contact-button" type="button" class="button app-button">
                     <i class="fa fa-user-plus fa-lg" aria-hidden="true"></i> Add Contact
-                </a>
+                </a>-->
+                <button id="add-contact-button" type="button" class="button-hover-default button"><span>Add contact </span><i class="fa fa-user-plus"></i></button>
                 <br>
                 <input class="button expanded" type="submit" value="Save">
             </form>
