--- a/public/profile.html
+++ b/public/profile.html
@@ -105,34 +105,34 @@
                 <div id="contacts">
                     <div class="contact-form">
                         <div class="floated-label-wrapper">
-                            <label for="full-name">Full name</label>
-                            <input type="text" id="full-name" name="full name input" placeholder="Full name">
+                            <label for="full-name-0">Full name</label>
+                            <input type="text" id="full-name-0" name="full name input" placeholder="Full name">
                         </div>
                         <div class="floated-label-wrapper">
-                            <label for="tel">Phone #</label>
-                            <input type="tel" id="tel" name="tel input" placeholder="Phone number">
-                        </div>
-                    </div>
-                    <br>
-                    <div class="contact-form">
-                        <div class="floated-label-wrapper">
-                            <label for="full-name">Full name</label>
-                            <input type="text" id="full-name" name="full name input" placeholder="Full name">
-                        </div>
-                        <div class="floated-label-wrapper">
-                            <label for="tel">Phone #</label>
-                            <input type="tel" id="tel" name="tel input" placeholder="Phone number">
+                            <label for="tel-0">Phone #</label>
+                            <input type="tel" id="tel-0" name="tel input" placeholder="Phone number">
                         </div>
                     </div>
                     <br>
                     <div class="contact-form">
                         <div class="floated-label-wrapper">
-                            <label for="full-name">Full name</label>
-                            <input type="text" id="full-name" name="full name input" placeholder="Full name">
+                            <label for="full-name-1">Full name</label>
+                            <input type="text" id="full-name-1" name="full name input" placeholder="Full name">
                         </div>
                         <div class="floated-label-wrapper">
-                            <label for="tel">Phone #</label>
-                            <input type="tel" id="tel" name="tel input" placeholder="Phone number">
+                            <label for="tel-1">Phone #</label>
+                            <input type="tel" id="tel-1" name="tel input" placeholder="Phone number">
+                        </div>
+                    </div>
+                    <br>
+                    <div class="contact-form">
+                        <div class="floated-label-wrapper">
+                            <label for="full-name-2">Full name</label>
+                            <input type="text" id="full-name-2" name="full name input" placeholder="Full name">
+                        </div>
+                        <div class="floated-label-wrapper">
+                            <label for="tel-2">Phone #</label>
+                            <input type="tel" id="tel-2" name="tel input" placeholder="Phone number">
                         </div>
                     </div>
                     <br>
@@ -144,7 +144,7 @@
                 </a>-->
                 <button id="add-contact-button" type="button" class="button-hover-default button"><span>Add contact </span><i class="fa fa-user-plus"></i></button>
                 <br>
-                <input class="button expanded" type="submit" value="Save">
+                <input id="save-profile-button" class="button expanded" type="submit" value="Save">
             </form>
         </div>
         <div class="push">
