got react working

--- a/public/test.html
+++ b/public/test.html
@@ -5,6 +5,11 @@
     <title>pulse api</title>
   </head>
   <body>
-    <h2>welcome to the pulse api</h2>
+    <div id="root">
+      
+    </div>
+    <script src="bundle.js">
+      
+    </script>
   </body>
 </html>
