made a splash page logo with animation

--- a/public/views_to_refactor/splash.html
+++ b/public/views_to_refactor/splash.html
@@ -35,14 +35,16 @@
 <body>
     <div class="homepage-hero-module">
         <div class="video-container">
-
             <div class="filter"></div>
-            <div class="title-container">
-                <div>
-                    <img id="pulse-logo-big" class="animated pulse" src="assets/images/pulse-logo-big.png" alt="">
+            <div id="title-container" class="row">
+                <div id="title-container" class="small-12 columns splash-logo">
+                    <img id="pulse-logo-waves" class="animated pulse" src="assets/images/pulse-waves.png" alt="">
+                    <img id="pulse-logo-big" class="" src="assets/images/pulse-logo-nowaves.png" alt="">
                 </div>
-                <!-- Sign in Button-->
-                <div>
+            </div>
+            <!-- Sign in Button-->
+            <div id="signin-button-container" class="row">
+                <div class="small-12 columns">
                     <a href="#" id="sign-in-button" class="welcome button-hover-addcart button" data-onsuccess="onSignIn"><span>Sign In</span><i class="fa fa-google" aria-hidden="true"></i></a>
                 </div>
             </div>
