added google component rough draft

--- a/public/test.html
+++ b/public/test.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+     <meta name="google-signin-scope" content="profile email">
+    <!-- uncomment for heroku deployment -->
+    <meta name="google-signin-client_id" content="904019024650-eaprlckr58veqebrbnlssik6uap05rl8.apps.googleusercontent.com"></meta>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <title>pulse api</title>
   </head>
   <body>
