--- a/public/views_to_refactor/test.html
+++ b/public/views_to_refactor/test.html
@@ -18,13 +18,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation-flex.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/js/foundation.min.js" integrity="sha256-Nd2xznOkrE9HkrAMi4xWy/hXkQraXioBg9iYsBrcFrs="
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/js/plugins/foundation.offcanvas.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/js/plugins/foundation.offcanvas.min.js"></script> -->
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/menu.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/form.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/button.css" type="text/css" />
     <!--Bringing in fontawesome in order to use their icons-->
-    <script src="https://use.fontawesome.com/97f0d0a6dd.js"></script>
+    <!-- <script src="https://use.fontawesome.com/97f0d0a6dd.js"></script> -->
 
     <script type="text/javascript" src="assets/js/myapp.js" async defer></script>
 </head>
