--- a/public/splash.html
+++ b/public/splash.html
@@ -3,14 +3,14 @@
 
 <head>
     <title>Pulse</title>
-    <meta name="google-signin-scope" content="profile email">
+    <!--<meta name="google-signin-scope" content="profile email">-->
 
-    <!-- <meta name="google-signin-client_id" content="904019024650-eaprlckr58veqebrbnlssik6uap05rl8.apps.googleusercontent.com"></meta> -->
-    <meta name="google-signin-client_id" content="533524339613-mm3v70onq310vr0qep2it2pj5vcj1t33.apps.googleusercontent.com"></meta>
+     <meta name="google-signin-client_id" content="904019024650-eaprlckr58veqebrbnlssik6uap05rl8.apps.googleusercontent.com"></meta> 
+    <!--<meta name="google-signin-client_id" content="533524339613-mm3v70onq310vr0qep2it2pj5vcj1t33.apps.googleusercontent.com"></meta>-->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous">
     </script>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <!--<script src="https://apis.google.com/js/platform.js" async defer></script>-->
     <meta charset="UTF-8">
     <!--Bringing in foundation, foundation-flex, jquery, and local style files-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css" integrity="sha256-itWEYdFWzZPBG78bJOOiQIn06QCgN/F0wMDcC4nOhxY="
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-    <div class="homepage-hero-module">
+    <div class="homepage-hero-module" style="z-index: 2; position: absolute;">
         <div class="video-container">
             <div class="filter"></div>
             <div id="title-container" class="row">
@@ -45,7 +45,9 @@
             <!-- Sign in Button-->
             <div id="signin-button-container" class="row">
                 <div class="small-12 columns">
-                    <a href="#" id="sign-in-button" class="welcome button-hover-addcart button" data-onsuccess="onSignIn"><span>Sign In</span><i class="fa fa-google" aria-hidden="true"></i></a>
+                    <div id="my-signin2"></div>
+                    <!--<div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>-->
+                    <!--<a href="#" id="sign-in-button" class="welcome button-hover-addcart button g-signin2" data-onsuccess="onSignIn"><span>Sign In</span><i class="fa fa-google" aria-hidden="true"></i></a>-->
                 </div>
             </div>
             <video autoplay loop class="fillWidth">
@@ -57,9 +59,53 @@
             </div>-->
         </div>
     </div>
+    <!--react node root-->
+    <div id="root" style="z-index: 1; position: absolute;"></div>
     <script>
         $(document).foundation();
+
+// successfull signin here
+function onSuccess(googleUser) {
+      console.log('Logged in as: ' + googleUser.getBasicProfile().getName());
+    //   console.log(JSON.stringify(googleUser, null, 1));
+       // Useful data for your client-side scripts:
+        var profile = googleUser.getBasicProfile();
+        console.log("ID: " + profile.getId()); // Don't send this directly to your server!
+        console.log('Full Name: ' + profile.getName());
+        console.log('Given Name: ' + profile.getGivenName());
+        console.log('Family Name: ' + profile.getFamilyName());
+        console.log("Image URL: " + profile.getImageUrl());
+        console.log("Email: " + profile.getEmail());
+
+        // The ID token you need to pass to your backend:
+        id_token = googleUser.getAuthResponse().id_token;
+        console.log("ID Token: " + id_token);
+        // hides the splash page on successfull signin
+        $('.homepage-hero-module').css({"z-index": -1});
+    }
+
+
+// failed to signin condition here
+function onFailure(error) {
+      console.log(error);
+    }
+
+    // customize the signin button here
+        function renderButton() {
+            gapi.signin2.render('my-signin2', {
+                'scope': 'profile email',
+                'width': 240,
+                'height': 50,
+                'longtitle': true,
+                'theme': 'dark',
+                'onsuccess': onSuccess,
+                'onfailure': onFailure
+            });
+        }
+
     </script>
+    <script src="bundle.js"></script>
+    <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
 </body>
 
 </html>
