--- a/public/splash.html
+++ b/public/splash.html
@@ -5,16 +5,9 @@
     <title>Pulse</title>
     <!--<meta name="google-signin-scope" content="profile email">-->
 
-<<<<<<< HEAD:public/splash.html
-     <meta name="google-signin-client_id" content="904019024650-eaprlckr58veqebrbnlssik6uap05rl8.apps.googleusercontent.com"></meta> 
-    <!--<meta name="google-signin-client_id" content="533524339613-mm3v70onq310vr0qep2it2pj5vcj1t33.apps.googleusercontent.com"></meta>-->
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-        crossorigin="anonymous">
-=======
     <!-- <meta name="google-signin-client_id" content="904019024650-eaprlckr58veqebrbnlssik6uap05rl8.apps.googleusercontent.com"></meta> -->
     <meta name="google-signin-client_id" content="533524339613-mm3v70onq310vr0qep2it2pj5vcj1t33.apps.googleusercontent.com"></meta>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous">
->>>>>>> 16ac0358b7ec56beaa7ec0338c41b39ba3d1b3eb:public/views_to_refactor/splash.html
     </script>
     <!--<script src="https://apis.google.com/js/platform.js" async defer></script>-->
     <meta charset="UTF-8">
@@ -37,7 +30,7 @@
 </head>
 
 <body>
-    <div class="homepage-hero-module" style="z-index: 2; position: absolute;">
+    <div class="homepage-hero-module" style="position: relative; z-index: 2;">
         <div class="video-container">
             <div class="filter"></div>
             <video autoplay loop class="fillWidth">
@@ -49,17 +42,9 @@
                 <img id="pulse-logo-big" class="column" src="assets/images/pulse-logo-nowaves.png" alt="">
             </div>
             <!-- Sign in Button-->
-<<<<<<< HEAD:public/splash.html
-            <div id="signin-button-container" class="row">
-                <div class="small-12 columns">
-                    <div id="my-signin2"></div>
-                    <!--<div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>-->
-                    <!--<a href="#" id="sign-in-button" class="welcome button-hover-addcart button g-signin2" data-onsuccess="onSignIn"><span>Sign In</span><i class="fa fa-google" aria-hidden="true"></i></a>-->
-=======
             <div id="signin-button-container" class="row align-bottom">
                 <div class="column">
                     <a href="#" id="sign-in-button" class="welcome button-hover-addcart button" data-onsuccess="onSignIn"><span>Sign In</span><i class="fa fa-google" aria-hidden="true"></i></a>
->>>>>>> 16ac0358b7ec56beaa7ec0338c41b39ba3d1b3eb:public/views_to_refactor/splash.html
                 </div>
             </div>
             <!--<div class="poster hidden">
@@ -68,7 +53,7 @@
         </div>
     </div>
     <!--react node root-->
-    <div id="root" style="z-index: 1; position: absolute;"></div>
+    <div id="root" style="z-index: 1; position: relative;"></div>
     <script>
         $(document).foundation();
 
@@ -89,7 +74,7 @@ function onSuccess(googleUser) {
         id_token = googleUser.getAuthResponse().id_token;
         console.log("ID Token: " + id_token);
         // hides the splash page on successfull signin
-        $('.homepage-hero-module').css({"z-index": -1});
+        $('.homepage-hero-module').css({"z-index": -1000});
     }
 
 
