trouble shoot redux

--- a/public/splash.html
+++ b/public/splash.html
@@ -30,30 +30,9 @@
 </head>
 
 <body>
-    <div id="sp" class="homepage-hero-module" style="position: relative; z-index: 2;">
-        <div class="video-container">
-            <div class="filter"></div>
-            <video autoplay loop class="fillWidth">
-                <source src="assets/videos/circles_and_people/circles_and_people.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
-                <source src="assets/videos/circles_and_people/circles_and_people.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
-            </video>
-            <div id="title-container" class="row align-middle splash-logo">
-                <img id="pulse-logo-waves" class="column animated pulse" src="assets/images/pulse-waves.png" alt="PULSE">
-                <img id="pulse-logo-big" class="column" src="assets/images/pulse-logo-nowaves.png" alt="">
-            </div>
-            <!-- Sign in Button-->
-            <div id="signin-button-container" class="row">
-                <div class="small-12 columns">
-                    <div id="googleButton"></div>
-                </div>
-            </div>
-            <!--<div class="poster hidden">
-                <img src="assets/videos/circles_and_people/circles_and_people.jpg" alt="">
-            </div>-->
-        </div>
-    </div>
+ 
     <!--react node root-->
-    <div id="root" style="z-index: 1; position: relative;"></div>
+    <div id="root"></div>
     <script>
         $(document).foundation();
 
