--- a/public/test.html
+++ b/public/test.html
@@ -27,6 +27,7 @@
     <script src="https://use.fontawesome.com/97f0d0a6dd.js"></script>
 
     <script type="text/javascript" src="assets/js/myapp.js" async defer></script>
+    <script type="text/javascript" src="assets/js/form.js" async defer></script>
 </head>
 
 <body>
