--- a/public/splash.html
+++ b/public/splash.html
@@ -11,6 +11,8 @@
     </script>
     <!--<script src="https://apis.google.com/js/platform.js" async defer></script>-->
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" media="all">
+    <link rel="stylesheet" type="text/css" href="https://redux-form.com/6.6.2/bundle.css" media="all">
     <!--Bringing in foundation, foundation-flex, jquery, and local style files-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css" integrity="sha256-itWEYdFWzZPBG78bJOOiQIn06QCgN/F0wMDcC4nOhxY=" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation-flex.min.css" />
